--- a/static/styles.css
+++ b/static/styles.css
@@ -1,42 +1,31 @@
 body {
+    background: url("background 3.jpg") no-repeat center center fixed;
+    background-size: cover;
     font-family: Arial, sans-serif;
     text-align: center;
     background-color: #f8f1ff;
 }
-
-.container {
-    width: 50%;
-    margin: auto;
-    padding: 20px;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-}
-
 h1 {
+    font-size: xx-large;
     color: #8b5cf6;
 }
-
-input, select, button {
+select, button {
     margin: 10px;
     padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
 }
-
 button {
     background-color: #8b5cf6;
     color: white;
     border: none;
+    border-radius: 5px;
     cursor: pointer;
 }
-
 button:hover {
-    background-color: #6d28d9;
+    background-color: #7b4bd6;
 }
-
-#suggestedOutfit img {
+img {
     margin-top: 20px;
     width: 200px;
+    height: auto;
     border-radius: 10px;
 }
